syntax = "proto3";

package chat_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/drizzleEnt/chat-server/pkg/chat_v1;chat_v1";


service Chat_v1{
    rpc CreateChat(google.protobuf.Empty) returns (CreateChatResponse);
    rpc ConnectChat (ConnectChatRequest) returns (stream Message);
    rpc SendMessage (SendMessageRequest) returns (google.protobuf.Empty);
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

message Message{
    string from = 1;
    string text = 2;
    google.protobuf.Timestamp created_at = 3;
}

message CreateChatResponse{
    string chat_id = 1;

}

message ConnectChatRequest{
    string chat_id = 1;
    string username = 2;
}

message SendMessageRequest{
    string chat_id = 1;
    Message message = 2;
}

message CreateRequest{
    repeated string usernames = 1;
    string msg =2;
}

message CreateResponse{
    int64 id = 1;
}

message DeleteRequest{
    int64 id = 1;
}